<resources>
    <string name="app_name">HIIT FIT</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="log_out">Log Out</string>
    <string name="your_profile">Your Profile</string>
    <string name="userpicture">UserPicture</string>
    <string name="emailpicture">emailpicture</string>
    <string name="usericon">usericon</string>
    <string name="change_your_profile">Change Your Profile</string>
    <string name="reset_your_password">Reset Your Password</string>

    <string name="details">Details</string>
    <string name="weightLabel">Weight</string>
    <string name="fatLabel">Fat</string>
    <string name="waterLabel">Water</string>
    <string name="musclesLabel">Muscles</string>
    <string name="ffmiLabel">FFMI</string>
    <string name="rfmLabel">RFM</string>
    <string name="indexLabel">Index</string>
    <string name="imcLabel">BMI</string>
    <string name="very_severely_underweight">very severely underweight</string>
    <string name="severely_underweight">severely underweight</string>
    <string name="underweight">underweight</string>
    <string name="normal">normal</string>
    <string name="overweight">overweight</string>
    <string name="obese_class_i">obese_class_i</string>
    <string name="obese_class_ii">obese_class_ii</string>
    <string name="obese_class_iii">obese_class_iii</string>
    <string name="message">Message…</string>
    <string name="no_users_found">No users found!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>